[tool.poetry]
name = "avilla-miraigo-onebot"
version = "0.0.1"
description = ""
authors = ["ProgramRipper <programripper@foxmail.com>"]
license = "AGPL-3.0"
packages = [
    { include = "avilla/miraigo" },
]

[tool.poetry.dependencies]
python = "^3.8"
avilla-core = "^0.0.10"
avilla-onebot = "^0.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
